syntax = 'proto3';
package GOTV_PLUS;

service GOTV_Plus {
  rpc GetMatches(GetMatchesRequest) returns (GetMatchesReply) {}
  rpc MarkID(MarkIDRequest) returns (MarkIDReply) {}
}

message Match {
  string token = 1;
  string id = 2;
}

message GetMatchesRequest {
  
}

message GetMatchesReply {
  repeated Match match = 1;
  bool error = 2;
  string errormessage = 3;
}

message MarkIDRequest {
  string token = 1;
  string id = 2;
}

message MarkIDReply {
  bool error = 1;
  string errormessage = 2;
}